# Inception

./: .env  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  maria.sh  script.sh
Exam05/01/: ASpell.cpp  ASpell.hpp  ATarget.cpp  ATarget.hpp  Dummy.cpp  Dummy.hpp  Fwoosh.cpp  Fwoosh.hpp  Warlock.cpp  Warlock.hpp  a.out  main.cpp
srcs/: .env  docker-compose.yml  dockerfile
srcs/MariaDB/: Dockerfile  dockerfile
srcs/MariaDB/includes/: 50-server.conf  script.php  script.sh
srcs/WordPress/: Dockerfile  dockerfile
srcs/WordPress/includes/: script.sh  wp-config.php  wp.conf
srcs/nginx/: Dockerfile  file.conf  script.sh
srcs/requirements/MariaDB/: dockerfile
srcs/requirements/MariaDB/includes/: .mariadb.conf.swp  script.sh
srcs/requirements/MariaDB/tools/: script.sh
srcs/requirements/WordPress/: dockerfile
srcs/requirements/WordPress/includes/: script.sh  wp.conf
srcs/requirements/WordPress/tools/: script.sh
srcs/requirements/nginx/: dockerfile  file.conf
srcs/requirements/nginx/tools/: file.conf
