cmake_minimum_required(VERSION 3.24)
project(Inception)

set(CMAKE_CXX_STANDARD 14)

add_executable(Inception
        Exam05/00/Warlock.cpp Exam05/00/Warlock.hpp Exam05/00/main.cpp Exam05/01/ASpell.cpp Exam05/01/ASpell.hpp Exam05/01/ATarget.cpp Exam05/01/ATarget.hpp Exam05/01/main.cpp Exam05/01/Fwoosh.hpp Exam05/01/Fwoosh.cpp Exam05/01/Dummy.cpp Exam05/01/Dummy.hpp Exam05/01/Warlock.cpp Exam05/02/FireBall.cpp Exam05/02/FireBall.hpp Exam05/02/Polymorph.hpp Exam05/02/Polymorph.cpp Exam05/02/BrickWall.hpp Exam05/02/BrickWall.cpp Exam05/02/Dummy.hpp Exam05/02/SpellBook.hpp Exam05/02/SpellBook.cpp Exam05/02/ASpell.cpp Exam05/02/Warlock.cpp Exam05/02/TargetGenerator.cpp Exam05/02/TargetGenerator.hpp Exam05/02/main.cpp Exam05/02/ATarget.cpp)
